Implement Sign In with JWT Tokens in WebApi

--- a/FCSeafood/FCSeafood.WebAPI/appsettings.json
+++ b/FCSeafood/FCSeafood.WebAPI/appsettings.json
@@ -1,4 +1,21 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=Test;User ID=FCS_User;Password=s1c@r8;TrustServerCertificate=True"
+  },
+  "AppSettings": {
+    "UseCORS": true,
+    "CORSAllowedHosts": "https://lc.fcseafood.com/*"
+  },
+  "TokenKeys": {
+    "Access": "fcs_access_key",
+    "Refresh": "fcs_refresh_key"
+  },
+  "JWTAuthSetting": {
+    "AuthIssuer": "authFCS",
+    "AuthAudience": "FCSServer",
+    "AuthSecret": "C4X%9JdBfpVvR^63kQww",
+    "AuthTokenLifeTime": 36000
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
