--- a/FCSeafood/FCSeafood.WebAPI/FCSeafood.WebAPI.csproj
+++ b/FCSeafood/FCSeafood.WebAPI/FCSeafood.WebAPI.csproj
@@ -7,12 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.28.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers" />
+      <ProjectReference Include="..\FCSeafood.BLL\FCSeafood.BLL.csproj" />
     </ItemGroup>
 
 </Project>
