--- a/FCSeafood/FCSeafood.BLL/FCSeafood.BLL.csproj
+++ b/FCSeafood/FCSeafood.BLL/FCSeafood.BLL.csproj
@@ -7,10 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\FCSeafood.BusinessObjects\FCSeafood.BusinessObjects.csproj" />
       <ProjectReference Include="..\FCSeafood.DAL\FCSeafood.DAL.csproj" />
     </ItemGroup>
 
