--- a/FCSeafood/FCSeafood.DAL/FCSeafood.DAL.csproj
+++ b/FCSeafood/FCSeafood.DAL/FCSeafood.DAL.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\FCSeafood.BusinessObjects\FCSeafood.BusinessObjects.csproj" />
+    </ItemGroup>
+
 </Project>
