implement material styles

--- a/Angular/FCSeafood/angular.json
+++ b/Angular/FCSeafood/angular.json
@@ -33,7 +33,8 @@
             "styles": [
               "src/styles.scss",
               "node_modules/primeflex/primeflex.css",
-              "node_modules/primeflex/themes/saga-blue.css"
+              "node_modules/primeflex/themes/saga-blue.css",
+              "@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
           },
@@ -99,7 +100,8 @@
             "styles": [
               "src/styles.scss",
               "node_modules/primeflex/primeflex.css",
-              "node_modules/primeflex/themes/saga-blue.css"
+              "node_modules/primeflex/themes/saga-blue.css",
+              "@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
           }
