--- a/FCSeafood/FCSeafood.WebAPI/appsettings.json
+++ b/FCSeafood/FCSeafood.WebAPI/appsettings.json
@@ -8,7 +8,8 @@
   },
   "TokenKeys": {
     "Access": "fcs_access_key",
-    "Refresh": "fcs_refresh_key"
+    "Refresh": "fcs_refresh_key",
+    "AccessGuest": "fcs_guest_key"
   },
   "JWTAuthSetting": {
     "AuthIssuer": "authFCS",
