Implement reset password

--- a/FCSeafood/FCSeafood.WebAPI/appsettings.json
+++ b/FCSeafood/FCSeafood.WebAPI/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=Test;User ID=FCS_User;Password=s1c@r8;TrustServerCertificate=True"
   },
+  "GlobalSettings": {
+    "DomainUrl": "https://lc.fcseafood.com"
+  },
   "AppSettings": {
     "UseCORS": true,
     "CORSAllowedHosts": "https://lc.fcseafood.com/*"
@@ -16,6 +19,12 @@
     "AuthAudience": "FCSServer",
     "AuthSecret": "C4X%9JdBfpVvR^63kQww",
     "AuthTokenLifeTime": 36000
+  },
+  "SMTP": {
+    "UserName": "frashcatch@gmail.com",
+    "Password": "cezvxbaubpiuripf",
+    "Server": "smtp.gmail.com",
+    "Port": 587
   },
   "Logging": {
     "LogLevel": {
